added unit tests

--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewmodel"
-            type="com.ags.annada.characters.characters.CharactersViewModel" />
+            type="com.ags.annada.characters.main.CharactersViewModel" />
 
         <variable
             name="item"
