--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewmodel"
-            type="com.ags.annada.characters.characters.CharactersViewModel" />
+            type="com.ags.annada.characters.main.CharactersViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
