--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/characters_fragment_dest"
-        android:name="com.ags.annada.characters.characters.CharactersFragment"
+        android:name="com.ags.annada.characters.main.CharactersFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_characters">
         <action
